# hazid-card

./: TODO.md  pyproject.toml
app_project/: db.sqlite3
app_project/app_project/: settings.py  urls.py
app_project/hazid/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
app_project/hazid/migrations/: 0001_initial.py  0002_alter_survey_activity_observed.py  0002_alter_survey_if_reported.py  0002_alter_survey_options_survey_title.py  0003_alter_survey_corrective_measures_and_more.py  0003_alter_survey_created_at.py  0004_alter_survey_created_at.py  0004_rename_i_obseved_survey_i_observed.py  0005_alter_survey_created_at.py  0006_alter_survey_if_reported_and_more.py  0007_alloweduser_alter_survey_options.py  0008_alter_customuser_options_alter_survey_options.py  0009_alter_customuser_groups.py  0010_alter_customuser_groups.py
app_project/hazid/static/css/: style..css
app_project/hazid/static/hazid/css/: style.css  style.css.map  style.scss
app_project/hazid/templates/hazid/: about_me.html  base.html  create_survey.html  detail.html  index.html  profile.html  qr.html  stats.html  winners.html
app_project/hazid/templates/registration/: login.html  register.html
app_project/hazid/templates/registration/password_change/: password_change_form.html
